syntax = "proto3";

option csharp_namespace = "MessageDistributionService";

package messageDistribution;

service MessageDistribution {
  rpc RedirectMessage (RedirectMessageRequest) returns (RedirectMessageReply);
}

message RedirectMessageRequest{
  string messageContent = 1;
  int32 fromUserId = 2;
  int32 toUserId = 3;
  string date = 4;
}

message RedirectMessageReply{
  int32 distributionStatus = 1;
}